# IPInspectorZ

./: .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: FEATURES.md  PRIVACY.md
.github/workflows/: build.yml
docs/: BUILD.md  FEATURES.md  PRIVACY.md  downloader.html  index.html
src/: api.ts  device.ts  fingerprint.ts  main.ts  network.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CopyButton.ts  Dashboard.ts  LoadingSpinner.ts  Section.ts
src/network-analysis/: asn-analysis.ts  dns-analysis.ts  index.ts  proxy-detection.ts  risk-classification.ts  tor-detection.ts
test/: PUBLISH.md
