[package]
name = "ip-inspector-z"
version = "1.0.0"
description = "Lightweight network and device diagnostics"
authors = ["IP Inspector Z"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "ip_inspector_z_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
